Refactor: remove unused import & deprecated api